--- a/front-end/css/add-bl.css
+++ b/front-end/css/add-bl.css
@@ -125,6 +125,17 @@ textarea::placeholder {
     color: #666;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0 1000px #1a1a1a inset;
+    -webkit-text-fill-color: #e0e0e0;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 select {
     cursor: pointer;
 }
